fix class.movie, added new wrapping function in class.movie, updated class, added tests with codeception

--- a/src/css/lumiere.css
+++ b/src/css/lumiere.css
@@ -193,13 +193,13 @@ padding:20px 20px 0 20px;float:left;}
 
 .imdbelementTRAILER {		/*TRAILER*/}
 
-.imdbelementALSOKNOW {		/*ALSOKNOW*/}
+.imdbelementALSOKNOWN {		/*ALSOKNOW*/}
 
 .imdbelementCOMPOSER {		/*COMPOSER*/}
 
 .imdbelementSOUNDTRACK {		/*SOUNDTRACK*/}
 
-.imdbelementKEYWORDS {		/*KEYWORDS*/}
+.imdbelementKEYWORD {		/*KEYWORDS*/}
 
 .imdbelementPRODCOMPANY {		/*PRODUCTION COMPANIES*/}
 
@@ -213,7 +213,7 @@ padding:20px 20px 0 20px;float:left;}
 
 .imdbelementWRITER {			/*WRITER*/}
 
-.imdbelementACTORl {			/*ACTOR*/}
+.imdbelementACTOR {			/*ACTOR*/}
 
 .imdbelementPLOT {			/*PLOT*/}
 
